fixed overflowing sections on homepage

--- a/app/assets/stylesheets/pages/homepage.sass
+++ b/app/assets/stylesheets/pages/homepage.sass
@@ -77,7 +77,7 @@
 
     .events_banner
       +flex_column_then_row
-      height: 100vh
+      min-height: 100vh
       margin-bottom: $xl-space
       text-align: center
 
